test/tests/nek_errors/invalid_field/pyramid.oudf
void velocityDirichletConditions(bcData *bc)
{
  bc->u = 0.1;
  bc->v = 0.0;
  bc->w = 0.0;
}
